# TenLib

./: .gitignore  MVP.md  README.md  debug_test.py  pyproject.toml
ejemplos_entrenamiento/: CanisLycaon] Tensei Shitara Slime Datta Ken Vol 21 [Prólogo].txt  prologo_malo.txt
inputs/: 803500886-Vol-21.epub  prueba2.txt  prueba3.txt  prueba_nueva.txt
scripts/: eval_bible_pair.py
tenlib/: README.md  cli.py  config.example.yaml  debug_regex.py  factory.py  orchestrator.py  pyproject.toml  reconstructor.py  reconstructor_pdf.py  requirements.txt
tenlib/context/: bible.py  character_detector.py  compressor.py  extractor.py
tenlib/processor/chunker/: detector.py  models.py  normalizer.py  token_estimator.py
tenlib/processor/parsers/: epub_parser.py  factory.py  pdf_parser.py  txt_parser.py
tenlib/router/: __init__.py  base.py  prompt_builder.py  response_parser.py
tenlib/storage/: db.py  models.py  repository.py
tenlib/tenlib/: cli.py  factory.py
tenlib/tenlib/processor/: models.py
tenlib/tenlib/router/: __init__.py  base.py  claude.py  config_loader.py  gemini.py  models.py  prompt_builder.py  router.py
tenlib/tenlib/storage/: __init__.py
tenlib/tests/: test_cli.py  test_orchestrator.py
tenlib/tests/router/: test_response_parser.py  test_router.py
tests/: test_cli.py  test_orchestrator.py
tests/context/: test_bible.py  test_character_detector.py  test_compressor.py  test_extractor.py  test_repository_bible.py
tests/router/: test_prompt_builder.py  test_response_parser.py
tests/storage/: test_repository.py
(+7 files in other folders)
